# wcomp

./: .gitignore  Cargo.toml  TODO.md  graph.dot
chapters/: credits.tex  discarded.txt  embedded_wayland_server.aux  embedded_wayland_server.tex  linux_graphic_stack.aux  linux_graphic_stack.tex  overview.aux  overview.tex  platform_abstraction_layer.aux  platform_abstraction_layer.tex  rendering_engine.aux  rust.aux  rust.tex  screen_task.aux  screen_task.tex  structure.aux  tecnology_used.tex  wayland.aux  wayland.tex  wcomp.aux  wcomp.tex  wcomp_engine.aux  wcomp_engine.tex  wgpu.aux  wgpu.tex
resources/: coordinate_systems  pal_structure  primitive_assembly  screen_task_pipeline  standard_wayland_compositor  wcomp_events_processing  wcomp_structure  xorg_vs_wayland
src/: main.rs  move_logic.rs  resize_logic.rs  utils.rs  wcomp.rs
src/event_processing/: geometry_events.rs  mod.rs  platform_events.rs  wayland_requests.rs  wcomp_events.rs  wcomp_requests.rs
src/geometry_manager/: cursor_manager.rs  mod.rs  output_manager.rs  seat_manager.rs  surface_manager.rs
